--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: postgres:10.3
     restart: always
     environment:
-      - POSTGRES_USER=rck221
-      - POSTGRES_PASSWORD = toys15
+      - POSTGRES_USER=nope
+      - POSTGRES_PASSWORD = haha
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
